--- a/contact.html
+++ b/contact.html
@@ -98,7 +98,7 @@
     <main>
       <div class="grid-div">
         <div class="img-div">
-          <img src="Source/bg-04.png" alt="" width="100%" />
+          <img src="bg-04.png" alt="" width="100%" />
         </div>
         <div class="contact-div">
           <div class="form-div">
