--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       </nav>
     </header>
     <main>
-      <img src="source/bg-01-02.png" alt="" class="backgroundForHome" />
+      <img src="bg-01-02.png" alt="" class="backgroundForHome" />
       <section class="mainHeading">
         <div>
           <h1>
