--- a/register.html
+++ b/register.html
@@ -131,7 +131,7 @@
       </nav>
     </header>
     <main>
-      <img src="source/bg-01-02.png" alt="" class="backgroundForHome" />
+      <img src="bg-01-02.png" alt="" class="backgroundForHome" />
       <div class="flex-div">
         <div class="register-div">
           <h1>Register</h1>
