--- a/thankYou.html
+++ b/thankYou.html
@@ -70,7 +70,7 @@
     <main>
       <div class="grid-div">
         <div class="thankyou-img">
-          <img src="source/bg-05.png" alt="Thank you" width="90%" />
+          <img src="bg-05.png" alt="Thank you" width="90%" />
         </div>
         <div class="content-div">
           <h1>
