--- a/about.html
+++ b/about.html
@@ -1,98 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>TraWheel-About</title>
-        <link rel="stylesheet" href="style.css">
-        <style>
-            .grid-div{
-                display: grid;
-                grid-template-columns: 50% 50%;
-                height: 90vh;
-                justify-content: center;
-                align-items: center;
-                padding-left: 30px;
-                padding right: 30px;
-            }
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>TraWheel-About</title>
+    <link rel="stylesheet" href="style.css" />
+    <style>
+      .grid-div{
+          display: grid;
+          grid-template-columns: 50% 50%;
+          height: 90vh;
+          justify-content: center;
+          align-items: center;
+          padding-left: 30px;
+          padding right: 30px;
+      }
 
-            .about-content h1{
-                font-family: 'Cardo', serif;
-                font-size: 50px;
-                color: #464545;
-                padding-bottom: 30  px;
-            }
+      .about-content h1{
+          font-family: 'Cardo', serif;
+          font-size: 50px;
+          color: #464545;
+          padding-bottom: 30  px;
+      }
 
-            .about-content p{
-                
-                color: #464545;
-                font-family: 'Carrois Gothic SC', sans-serif;
-                line-height: 23px;
-            }
+      .about-content p{
 
-            
-        </style>
-    </head>
-    <body>
-        <header>
-            <a href="index.html" class="logo-link"><h1>TraWheel</h1></a>
-            <nav class="nav-bar">
-                <ul class="nav-list">
-                    <li class="nav-item"><a href="index.html">Home</a></li>
-                    <li class="nav-item"><a href="#" id="nav-item-active">About</a></li>
-                    <li class="nav-item"><a href="contact.html">Contact</a></li>
-                    <li class="nav-item"><a href="register.html"><button>Register</button></a></li>
-                </ul>
-            </nav>
-        </header>
-        <main>
-            <div class="grid-div">
-                <div class="about-content">
-                    <h1>Who are we?</h1>
-                    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
-                        sed diam nonumy eirmod tempor invidunt ut labore et
-                        dolore magna aliquyam erat, sed diam voluptua. At vero
-                        eos et accusam et justo duo dolores et ea rebum. Stet
-                        clita kasd gubergren, no sea takimata sanctus est Lorem
-                        ipsum dolor sit amet. Lorem ipsum dolor sit amet,
-                        consetetur sadipscing elitr, sed diam nonumy eirmod
-                        tempor invidunt ut labore et dolore magna aliquyam erat,
-                        sed diam voluptua. At vero eos et accusam et justo duo
-                        dolores et ea rebum. Stet clita kasd gubergren, no sea
-                        takimata sanctus est Lorem ipsum dolor sit amet.
-                        Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
-                        sed diam nonumy eirmod tempor invidunt ut labore et
-                        dolore magna aliquyam erat, sed diam voluptua. At vero
-                        eos et accusam et justo duo dolores et ea rebum. Stet
-                        clita kasd gubergren, no sea takimata sanctus est Lorem
-                        ipsum dolor sit amet. Lorem ipsum dolor sit amet,
-                        consetetur sadipscing elitr, sed diam nonumy eirmod
-                        tempor invidunt ut labore et dolore magna aliquyam erat,
-                        sed diam voluptua. At vero eos et accusam et justo duo
-                        dolores et ea rebum. Stet clita kasd gubergren, no sea
-                        takimata sanctus est Lorem ipsum dolor sit amet.
-                        Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
-                        sed diam nonumy eirmod tempor invidunt ut labore et
-                        dolore magna aliquyam erat, sed diam voluptua. At vero
-                        eos et accusam et justo duo dolores et ea rebum. Stet
-                        clita kasd gubergren, no sea takimata sanctus est.Lorem
-                        ipsum dolor sit amet, consetetur sadipscing elitr, sed
-                        diam nonumy eirmodtempor invidunt ut labore et dolore
-                        magna aliquyam erat,
-                        sed diam voluptua. At vero eos et accusam et justo duo
-                        dolores et ea rebum. Stet clita kasd gubergren, no sea
-                        takimata sanctus est Lorem ipsum dolor sit amet.
-                        Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
-                        sed diam nonumy eirmod tempor invidunt ut labore et
-                        dolore magna aliquyam erat, sed diam voluptua. At vero
-                        eos et accusam et justo duo dolores et ea rebum. Stet
-                        clita kasd gubergren, no sea takimata sanctus est.
-                    </p>
-                </div>
-                <div class="about-img">
-                    <img src="source/about-03.png" alt="world-map" width="100%">
-                </div>
-            </div>
-        </main>
-    </body>
+          color: #464545;
+          font-family: 'Carrois Gothic SC', sans-serif;
+          line-height: 23px;
+      }
+    </style>
+  </head>
+  <body>
+    <header>
+      <a href="index.html" class="logo-link"><h1>TraWheel</h1></a>
+      <nav class="nav-bar">
+        <ul class="nav-list">
+          <li class="nav-item"><a href="index.html">Home</a></li>
+          <li class="nav-item"><a href="#" id="nav-item-active">About</a></li>
+          <li class="nav-item"><a href="contact.html">Contact</a></li>
+          <li class="nav-item">
+            <a href="register.html"><button>Register</button></a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <div class="grid-div">
+        <div class="about-content">
+          <h1>Who are we?</h1>
+          <p>
+            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
+            nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
+            erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
+            et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est
+            Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur
+            sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore
+            et dolore magna aliquyam erat, sed diam voluptua. At vero eos et
+            accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
+            no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum
+            dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+            tempor invidunt ut labore et dolore magna aliquyam erat, sed diam
+            voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
+            Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum
+            dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing
+            elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore
+            magna aliquyam erat, sed diam voluptua. At vero eos et accusam et
+            justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
+            takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor
+            sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
+            invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
+            At vero eos et accusam et justo duo dolores et ea rebum. Stet clita
+            kasd gubergren, no sea takimata sanctus est.Lorem ipsum dolor sit
+            amet, consetetur sadipscing elitr, sed diam nonumy eirmodtempor
+            invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
+            At vero eos et accusam et justo duo dolores et ea rebum. Stet clita
+            kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit
+            amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
+            diam nonumy eirmod tempor invidunt ut labore et dolore magna
+            aliquyam erat, sed diam voluptua. At vero eos et accusam et justo
+            duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
+            sanctus est.
+          </p>
+        </div>
+        <div class="about-img">
+          <img src="about-03.png" alt="world-map" width="100%" />
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
