changed password to email in contact form

--- a/contact.html
+++ b/contact.html
@@ -109,9 +109,9 @@
               <br />
               <input type="text" class="form-input" name="fullName" />
               <br />
-              <label for="password">Password</label>
+              <label for="password">Email</label>
               <br />
-              <input type="password" class="form-input" name="password" />
+              <input type="email" class="form-input" name="password" />
               <br />
               <label for="phoneNumber">Phone Number</label>
               <br />
